<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_search_header">

        <ListPreference
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="use_dashboard"
            app:title="@string/settings_search_dashboard_select"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="enabled_search_history"
            app:title="@string/enabled_search_history" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous">

        <SwitchPreferenceCompat
            app:key="auto_check_updates"
            app:summaryOff="@string/auto_check_updates_summary_disabled"
            app:summaryOn="@string/auto_check_updates_summary"
            app:title="@string/auto_check_updates" />

    </PreferenceCategory>

</PreferenceScreen>