<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title_notifications"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/application"
                android:textColor="@color/summary_textcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/summary_textcolor"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/basic"
                android:textColor="@color/summary_textcolor" />

            <LinearLayout
                android:id="@+id/search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/history_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/search_history"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/use_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/developer_guide_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/use_guide"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/updates"
                android:textColor="@color/summary_textcolor" />

            <LinearLayout
                android:id="@+id/check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/update_24px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_update"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/check_update_summaty"
                        android:textColor="@color/summary_textcolor"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/update_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rss_feed_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/view_update_log"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/follow"
                android:textColor="@color/summary_textcolor" />

            <LinearLayout
                android:id="@+id/qqgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person_add_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/qq_group"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mail_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/email_contact"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bilibili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/youtube_activity_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/bilibili"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/donation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/featured_seasonal_and_gifts_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/donation"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/open_in_new_24px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/blog"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingTop="30dp"
                android:paddingRight="25dp"
                android:text="@string/copyright"
                android:textColor="@color/summary_textcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="75dp">

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textColor="@color/blue_grey_500" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/released_today" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
